--- a/cluster/platform/gitops-params.yaml
+++ b/cluster/platform/gitops-params.yaml
@@ -1,7 +1,7 @@
 gitopsParams:
   git:
-    url: git@github.com:weaveworks/wkp-core # GIT URL PLACEHOLDER
+    url: git@github.com:dinosk/dinos-workspaces-cont-47.git # GIT URL PLACEHOLDER
     branch: master # GIT BRANCH PLACEHOLDER
-    path: # GIT PATH PLACEHOLDER
+    path: /cluster/platform # GIT PATH PLACEHOLDER
   images:
-    clusterComponents: # CLUSTER COMPONENTS IMAGE PLACEHOLDER
+    clusterComponents: docker.io/weaveworks/wkp-cluster-components:WKP-1229-integration-test-for-gitlab-workspace-d4ecd250 # CLUSTER COMPONENTS IMAGE PLACEHOLDER
